--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="content" role="main">
   <app-header></app-header>
-  <div class="container-fluid">
+  <div class="container">
     <!-- this is to make it responsive to your screen width -->
     <div class="row">
       <div class="col-lg-12">
