--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,80 +1,76 @@
-<div class="container">
-  <div class="card-deck">
-    <div class="row mt-2">
-      <div class="col-sm-4">
-        <a (click)="titleClick()">
-        <div class="card  h-100">
+<div class="card-deck">
+  <div class="row mt-2">
+    <div class="col-md-4" *ngFor="let tile of tiles;let i=index">
+      <a (click)="titleClick(tile.id)">
+        <input type="hidden" name="tileid" value="{{tile.id}}" />
+        <div class="card h-100" style="max-height: 12rem;">
           <img class="card-img-top" src="..." alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title ">{{tile.title}}</h5>
+            <p class="card-text">{{tile.description}}</p>
+            <p class="card-text"><small class="text-muted">{{tile.date}}</small></p>
           </div>
         </div>
       </a>
-      </div>
-      <div class="col-sm-4">
-        <div class="card  h-100">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card  h-100">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
     </div>
-    <div class="row mt-2">
-      <div class="col-sm-4">
-        <div class="card  h-100">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content.
-              This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  </div>
+  <!-- </div> -->
+  <!-- <ng-template #no_row>
+      <div class="col-md-4">
+        <input type="hidden" name="tileid" value="{{tile.id}}" />
+        <a (click)="titleClick()">
+          <div class="card h-100">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">{{tile.title}}</h5>
+              <p class="card-text">{{tile.description}}</p>
+              <p class="card-text"><small class="text-muted">{{tile.date}}</small></p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
-      <div class="col-sm-4">
-        <div class="card  h-100">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content.This is a wider card with supporting text below as a natural lead-in to additional
-              content.
-              This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card  h-100">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content.This is a wider card with supporting text below as a natural lead-in to additional
-              content.
-              This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
+    </ng-template> -->
+  <!-- </div> -->
+</div>
+<!-- </div> -->
+<!-- 
+<div class="row mt-2">
+  <div class="col-sm-4">
+    <div class="card  h-100">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+          content.
+          This card has even longer content than the first to show that equal height action.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
   </div>
-</div>
+  <div class="col-sm-4">
+    <div class="card  h-100">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+          content.This is a wider card with supporting text below as a natural lead-in to additional
+          content.
+          This card has even longer content than the first to show that equal height action.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="card  h-100">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+          content.This is a wider card with supporting text below as a natural lead-in to additional
+          content.
+          This card has even longer content than the first to show that equal height action.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div> -->
