fixed router issue

--- a/src/app/layout/header/header/header.component.html
+++ b/src/app/layout/header/header/header.component.html
@@ -86,7 +86,7 @@
 <div class="header-main">
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <a href="#" class="navbar-brand">
-            <img src="/examples/images/logo.svg" height="28" alt="LogoBrand">
+            <!-- <img src="/examples/images/logo.svg" height="28" alt="LogoBrand"> -->
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -94,7 +94,8 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav">
-                <a href="#" class="nav-item nav-link active">Home</a>
+                <a href="#" class="nav-item nav-link active" outerLinkActive="active"
+                    routerLinkActive='routerlinkActive-active' routerLink='/dashboard'>Home</a>
                 <a href="#" class="nav-item nav-link">Profile</a>
                 <a href="#" class="nav-item nav-link">Messages</a>
                 <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>
