--- a/src/app/pages/dashboard/tile-detail/tile-detail.component.html
+++ b/src/app/pages/dashboard/tile-detail/tile-detail.component.html
@@ -1,4 +1,28 @@
-<p>tile-detail works!</p>
-<div>
-    ccccccccccccccccccccccccccccccccccccaaaaaaaaaasasasjasksapoAPOSKAsA'SLa,skmAQSqsQSMK,MSQMASXA,X
-</div>
+<!-- <div class="row"> -->
+   <section>
+   <div class="col-md-12">
+      <b>{{titleDetails.title}}</b>
+   </div>
+   <div class="col-md-12">
+      {{titleDetails.quote}}
+   </div>
+</section>
+   <div class="col-md-12">
+      {{titleDetails.tip}}
+   </div>
+   <div class="col-md-12">
+      {{titleDetails.why}}
+   </div>
+   <div class="col-md-12">
+      {{titleDetails.what}}
+   </div>
+   <div class="col-md-12">
+      {{titleDetails.how}}
+   </div>
+   <div class="col-md-12">
+      {{titleDetails.how}}
+   </div>
+   <div class="col-md-12">
+      {{titleDetails.date}}
+   </div>
+<!-- </div> -->
