blogging page set in.

--- a/src/app/pages/dashboard/tile-detail/tile-detail.component.html
+++ b/src/app/pages/dashboard/tile-detail/tile-detail.component.html
@@ -1,28 +1,294 @@
-<!-- <div class="row"> -->
-   <section>
-   <div class="col-md-12">
-      <b>{{titleDetails.title}}</b>
-   </div>
-   <div class="col-md-12">
-      {{titleDetails.quote}}
-   </div>
-</section>
-   <div class="col-md-12">
-      {{titleDetails.tip}}
-   </div>
-   <div class="col-md-12">
-      {{titleDetails.why}}
-   </div>
-   <div class="col-md-12">
-      {{titleDetails.what}}
-   </div>
-   <div class="col-md-12">
-      {{titleDetails.how}}
-   </div>
-   <div class="col-md-12">
-      {{titleDetails.how}}
-   </div>
-   <div class="col-md-12">
-      {{titleDetails.date}}
-   </div>
-<!-- </div> -->
+<div class="row wrapper">
+   <aside class="col-12 col-sm-3 p-0 bg-dark">
+      <div class="sticky">
+         <nav id="navbar"
+            class="navbar navbar-expand-sm navbar-dark align-items-start flex-sm-column flex-row navbar-fixed-top">
+            <a class="navbar-brand" href="#">
+               <header>Documentation</header>
+            </a>
+            <a href class="navbar-toggler" data-toggle="collapse" data-target=".sidebar">
+               <span class="navbar-toggler-icon"></span>
+            </a>
+            <div class="collapse navbar-collapse sidebar">
+               <ul class="flex-column navbar-nav w-100 justify-content-between">
+                  <!-- <li class="nav-item" id="subheading">Developing a Website</li> -->
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#Introduction"> <span class="">Introduction</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#Methodology"> <span class="">Methodology</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#Definition_Documents"> <span class="">Definition
+                           Documents</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#Sitemap"> <span class="">Sitemap</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#Brand_Guidelines"> <span class="">Brand Guidelines</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#Wireframes"> <span class="">Wireframes</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#UX_Recommendations"> <span class="">UX
+                           Recommendations</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#Technical_Brief"> <span class="">Technical Brief</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#Features_and_Functionality"> <span class="">Features and
+                           Functionality </span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#Creative_Brief"> <span class="">Creative Brief</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#Marketing_Strategy"> <span class="">Marketing
+                           Strategy</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#Website_Project_Estimate"> <span class="">Website Project
+                           Estimate</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#Project_Timeline"> <span class="">Project Timeline</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link pl-0" href="#Conclusion"> <span class="">Conclusion</span></a>
+                  </li>
+                  <!-- start Dropdown-->
+                  <!-- <li class="nav-item">
+                            <a class="nav-link pl-0 dropdown-toggle text-nowrap" href="#" data-parent="#navbar1" data-toggle="collapse" data-target="#m1" aria-expanded="false">
+                                 <span class="">Drop down</span>
+                            </a>
+                            <div class="collapse" id="m1">
+                                <ul class="flex-column nav">
+                                    <a class="nav-link px-0 text-truncate" href="#">Sub</a>
+                                    <a class="nav-link px-0 text-truncate" href="#">Sub longer</a>
+                                </ul>
+                            </div>
+                        </li> -->
+                  <!-- End Dropdown-->
+               </ul>
+            </div>
+         </nav>
+      </div> <!-- ./sticky-->
+   </aside>
+   <main id="main-doc" class="col bg-faded py-3">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-12">
+               <section id="Introduction" class="main-section">
+                  <header>
+                     <h2>Introduction</h2>
+                  </header>
+                  <h4>Planning For Web Design</h4>
+                  <p>Developing a website is like building a house. When building a house, you ask an architect to
+                     draw up the plans. The architect will obtain building permits, city licenses, oversee a
+                     geological survey and more… All before any actual construction begins. Similarly, Website
+                     Definition Documents act as your website’s architectural blueprint. By using these documents,
+                     you and your design agency can build a strong foundation.</p>
+               </section>
+               <section id="Methodology" class="main-section">
+                  <header>
+                     <h2>Methodology</h2>
+                  </header>
+                  <p>In the web business, the planning phase can be referred to as “Definition”, “Scope” or
+                     “Discovery.” During this preliminary planning phase, your website professionals will create
+                     documents that define website architecture, and identify key technical and creative
+                     requirements.</p>
+                  <p>These documents will help answer questions like:</p>
+                  <ul class="codelist">
+                     <li>What is the overall online strategy?</li>
+                     <li>How will the business brand be applied to the website?</li>
+                     <li>What programming framework will be used?
+                     </li>
+                     <li>What are the website features?
+                     </li>
+                     <li>How will marketing be integrated?
+                     </li>
+                     <li>What is the best site navigation to promote sales?
+                     </li>
+                  </ul>
+                  <p>The complexity of your website determines the type of documents/requirements you need, as well
+                     the length of the planning phase. Every web services agency should have their own version of
+                     these documents within their methodology. </p>
+
+               </section>
+               <section id="Definition_Documents" class="main-section">
+                  <header>
+                     <h2>Definition Documents</h2>
+                  </header>
+                  <p>The client should sign-off on the definition documents in order to begin the next phases of the
+                     website project. The Definition documents set expectations on both the client and agency-side as
+                     to the final website deliverables.</p>
+                  <p>If the client has contracted with the web agency to conduct a definition phase before committing
+                     to a full project deployment, then (at the end of this phase) the client owns all of this
+                     documentation. This can serve as a project road map for any web services agency.</p>
+                  <p>Below are a list of some of the areas that are needed in a definition doucment:</p>
+                  <ul>
+                     <li>Sitemap</li>
+                     <li>Brand Guidelines</li>
+                     <li>Wireframes</li>
+                     <li>UX Recommendations</li>
+                     <li>Technical Brief</li>
+                     <li>Features and Functionality</li>
+                     <li>Creative Brief</li>
+                     <li>Marketing Strategy</li>
+                     <li>Website Project Estimate</li>
+                     <li>Project Timeline</li>
+                  </ul>
+               </section>
+               <section id="Sitemap" class="main-section">
+                  <header>
+                     <h2>Sitemap</h2>
+                  </header>
+                  <p>A sitemap shows the bird’s eye view of the website structure. The standard template lays this
+                     out as a series of boxes linked by directional arrows that illustrate relationship and
+                     hierarchy. A sitemap can provide a web developer with a quick overview of the entire website.
+                  </p>
+               </section>
+
+               <section id="Brand_Guidelines" class="main-section">
+                  <header>
+                     <h2>Brand Guidelines</h2>
+                  </header>
+                  <p>This is a creative/marketing document guides the visual design of the website and dictates the
+                     correct way to represent the brand. This can include a Style Guide that provides logo usage,
+                     color palettes, font styles, graphics, etc.</p>
+
+               </section>
+
+               <section id="Wireframes" class="main-section">
+                  <header>
+                     <h2>Wireframes</h2>
+                  </header>
+                  <p>These are simple, blocky representations of website pages that are devoid of graphics and color.
+                     A wireframe indicates key content and functions required on a page. Designers and developers
+                     will reference the approved wireframes. Wireframes are usually created by an IA (Interface
+                     Architect) in a program like Axure or OmniGraffle. Key wireframes should be created for both
+                     mobile and desktop devices to indicate how the structure and function is meant to adapt to
+                     different screen resolutions.</p>
+               </section>
+
+               <section id="UX_Recommendations" class="main-section">
+                  <header>
+                     <h2>UX Recommendations</h2>
+                  </header>
+                  <p>This document is generally prepared by a usability expert who has knowledge of best practices
+                     within website design and has researched the client’s industry. The document spells out the best
+                     method to engage visitors to achieve the website’s business goals. For example, if the client is
+                     in the accounting industry, the usage of the color red may not be effective for buttons and
+                     calls-to-action.</p>
+               </section>
+
+               <section id="Technical_Brief" class="main-section">
+                  <header>
+                     <h2>Technical Brief</h2>
+                  </header>
+                  <p>This document is prepared by the Technical Project Manager. It covers the hardware requirements
+                     such as the hosting environment, type of server, application framework, coding standards,
+                     database structure. These documents can get very extensive (with diagrams and system
+                     architecture schematics), since this is usually where the bulk of a website effort resides.</p>
+
+                  <blockquote>
+
+                     <samp>HTML5 Doctype coding standards example:</samp><br /><br />
+                     <code>&lt;!doctype html&gt;<br /></code>
+                     <code>&lt;html lang=&quot;en-US&quot;&gt;<br /></code>
+                     <code>&lt;head&gt;<br /></code>
+                     <code>&lt;meta http-equiv=&quot;Content-Type&quot; content=&quot;text/html; charset=utf-8&quot;&gt;<br /></code>
+                     <code>&lt;title&gt;Default Page Title&lt;/title&gt;<br /></code>
+                     <code>&lt;link rel=&quot;shortcut icon&quot; href=&quot;favicon.ico&quot;&gt;<br /></code>
+                     <code>&lt;link rel=&quot;icon&quot; href=&quot;favicon.ico&quot;&gt;<br /></code>
+                     <code>&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;styles.css&quot;&gt;<br /></code>
+                     <code>&lt;/head&gt;<br /></code>
+                     <br />
+                     <code>&lt;body&gt;<br /></code>
+                     <br />
+                     <code>&lt;/body&gt;<br /></code>
+                     <code>&lt;/html&gt;</code>
+
+                  </blockquote>
+
+               </section>
+
+               <section id="Features_and_Functionality" class="main-section">
+                  <header>
+                     <h2>Features and Functionality</h2>
+                  </header>
+                  <p>This is a list of the proposed website features and the functions. Features are a website’s
+                     capabilities- like the ability to have a member profile or video streaming. Functions are how
+                     those features are implemented; it generally deals with the code that makes the features work.
+                     Many times this matrix will be separated by website area/section. Each feature and function will
+                     be accompanied by a short description and an LOW, or Level Of Effort. Later, this document can
+                     be tied into the project budget to show what the cost of various features may be, so the client
+                     can determine how best to proceed based on the intended budget.</p>
+               </section>
+
+               <section id="Creative_Brief" class="main-section">
+                  <header>
+                     <h2>Creative Brief</h2>
+                  </header>
+                  <p>The website project’s Art Director or Creative Director will prepare the creative brief after
+                     meeting with the client (and/or the client’s marketing staff). The businesses branding and how
+                     it will be represented within the website is a key component. This includes the types of
+                     graphics, color palette, and photography that will need to support the brand. A creative brief
+                     should also address the target audience(s) and what will appeal to them.</p>
+               </section>
+
+               <section id="Marketing_Strategy" class="main-section">
+                  <header>
+                     <h2>Marketing Strategy</h2>
+                  </header>
+                  <p>The marketing strategy is based on the client’s specific business goals. Agencies, like
+                     Executionists, follow a set of best-practices to observed for any website. Beyond that, there is
+                     no “one-size-fits-all” solution. Marketing strategy should be customized to the specific client,
+                     audience, and business goal(s).</p>
+               </section>
+
+               <section id="Website_Project_Estimate" class="main-section">
+                  <header>
+                     <h2>Website Project Estimate</h2>
+                  </header>
+                  <p>Most clients will get a rough estimate, or an estimate range, before the definition phase. The
+                     initial round of investigation following the definition phase will produce a realistic estimate.
+                     For example, initially the client mentions adding a website “search” feature. The feature was
+                     initially assumed to be a basic, out-of-the-box feature. But, during the planning phase, the
+                     team discovers that the client wants additional functions that will customize the search results
+                     in specific ways. The “search” feature may now jump from 3 hours of effort to 100 hours of
+                     effort, thereby changing the project estimate. Once the Definition phase is complete, a much
+                     more accurate estimate can be generated.</p>
+               </section>
+
+               <section id="Project_Timeline" class="main-section">
+                  <header>
+                     <h2>Project Timeline</h2>
+                  </header>
+                  <p>The timeline shows the various project phases broken up into sections that include milestones
+                     for deliverables and client approvals. Timelines merge with Resource Allocations, which is a
+                     list of the required staff for each phase. The unfortunate truth is most web projects don’t
+                     launch on time.</p>
+               </section>
+
+               <br /><br />
+               <section id="Conclusion" class="main-section">
+                  <header>
+                     <h2>Conclusion</h2>
+                  </header>
+                  <p>We create definition documents after discussing the project with the client and/or the client
+                     provides us with a business plan, or a website requirements document (RFP).</p>
+                  <p>Each web agency’s versions of these definition documents will vary based on their website
+                     definition & development process.
+                     So, whether you’re building a house or a website, remember to define your requirements and
+                     document your plans before you begin.</p>
+               </section>
+               <br /><br />
+            </div>
+         </div>
+      </div>
+   </main>
+</div>
